--- a/index.html
+++ b/index.html
@@ -127,8 +127,8 @@
       </div>
     </header>
 
-    <div class="container mx-auto flex-grow px-4 sm:px-0">
-      <div class="flex flex-col lg:flex-row gap-4">
+    <div class="flex items-center justify-center px-4 sm:px-0">
+      <div class=" flex flex-col lg:flex-row gap-4 ">
         <div class="job-listings lg:w-1/3 space-y-4" id="jobListingsContainer">
           <div
             class="bg-white p-4 rounded-lg shadow-lg"
@@ -288,13 +288,14 @@
         </div>
       </div>
 
-      <div
+      
+    </div>
+    <div
         class="pagination mt-4 flex justify-center items-center gap-2"
         id="paginationContainer"
       >
         <!-- Pagination buttons will be rendered here -->
       </div>
-    </div>
 
     <footer class="bg-[#264486] mt-8 p-4 sm:p-6 border-t border-gray-200">
       <div class="container mx-auto">
